# napari-apr-viewer

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_apr_viewer/: _APRViewer.py  __init__.py  _convert_apr_to_image.py  _convert_image_to_apr.py  _dock_widgets.py  _reader.py  _threshold.py  _utils.py  _writer.py
src/napari_apr_viewer/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
