[metadata]
name = napari-apr-viewer
author = Joel Jonsson
author_email = jonsson@mpi-cbg.de

license = Apache-2.0
description = A simple plugin to view APR images in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    pyapr>=1.0.0rc1
    napari
    napari-plugin-engine>=0.1.4
    qtpy
    magicgui

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-apr-viewer = napari_apr_viewer
